--- a/index.html
+++ b/index.html
@@ -173,206 +173,227 @@
 
 
     /* modal stying start */
-    /* General Styling for Auth Button */
+
+/* ================= AUTH BUTTON ================= */
+.auth-btn {
+    background-color: #0950ea;
+    color: #ffffff;
+    border: none;
+    padding: 5px 20px;
+    font-size: 10px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s, box-shadow 0.3s;
+    position: fixed;
+    top: 50px;
+    left: 270px;
+    font-weight: bold;
+    font-style: italic;
+    z-index: 1000;                  /* 🔒 */
+}
+
+.auth-btn:hover {
+    background-color: #e808ec;
+    color: #fbfbfb;
+}
+
+.auth-btn.logout {
+    background-color: #0a3ead;
+    color: #ebebeb;
+}
+
+.auth-btn.logout:hover {
+    background-color: #e808ec;
+    color: #fbfbfb;
+}
+
+/* ================= MODAL ================= */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 999;
+    inset: 0;                       /* 🔥 safer */
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.4);
+    animation: fadeIn 0.5s ease-in-out;
+}
+
+.modal-content {
+    background-color: #0e7cea;
+    padding: 30px;
+    border: 2px solid transparent;
+    border-radius: 15px;
+    width: 80%;
+    max-width: 500px;
+    max-height: 90vh;               /* 🔒 overflow fix */
+    overflow-y: auto;               /* 🔥 */
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+/* ================= ANIMATIONS ================= */
+@keyframes fadeOut {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
+@keyframes zoomIn {
+    from {
+        transform: translate(-50%, -50%) scale(0.8);
+        opacity: 0;
+    }
+    to {
+        transform: translate(-50%, -50%) scale(1);
+        opacity: 1;
+    }
+}
+
+/* ================= CLOSE BUTTON ================= */
+.close {
+    color: #aaa;
+    font-size: 28px;
+    font-weight: bold;
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+}
+
+/* ================= FORM ================= */
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+label {
+    margin-bottom: 5px;
+    font-weight: bold;
+    color: #ffffff;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+    padding: 12px;
+    margin-bottom: 15px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    font-size: 16px;
+    width: 100%;                    /* 🔒 */
+    box-sizing: border-box;
+}
+
+input[type="submit"] {
+    background-color: #000000;
+    color: #ffffff;
+    border: none;
+    padding: 12px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+input[type="submit"]:hover {
+    background-color: #333;
+}
+
+/* ================= WELCOME TEXT ================= */
+.welcome-user {
+    color: #f60bb7;
+    font-size: 15px;
+    position: fixed;
+    top: 80px;
+    left: 270px;
+    text-align: left;
+    font-weight: bold;
+    font-style: italic;
+    z-index: 1000;
+    max-width: calc(100vw - 20px);  /* 🔥 overflow block */
+}
+
+/* ================= RESPONSIVE ================= */
+
+/* Tablets & small laptops */
+@media (max-width: 768px) {
     .auth-btn {
-        background-color: #0950ea;
-        color: #ffffff;
-        border: none;
-        padding: 5px 20px;
-        font-size: 10px;
-        cursor: pointer;
-        border-radius: 5px;
-        transition: background-color 0.3s, box-shadow 0.3s;
-        position: fixed;
-        top: 50px;
-        left: 270px;
-        /* Moved to the left corner */
-        font-weight: bold;
-        /* Bold text */
-        font-style: italic;
-        /* Italic text */
-
+        left: 20px;                 /* 🔥 auto fix */
+        top: 20px;
     }
 
-    .auth-btn:hover {
-        background-color: #e808ec;
-        color: #fbfbfb;
+    .welcome-user {
+        left: 20px;
+        top: 55px;
+        font-size: 14px;
     }
+}
 
-    .auth-btn.logout {
-        background-color: #0a3ead;
-        color: #ebebeb;
-    }
-
-    .auth-btn.logout:hover {
-        background-color: #e808ec;
-        color: #fbfbfb;
-    }
-
-    /* Modal Styling */
-    .modal {
-        display: none;
-        position: fixed;
-        z-index: 1;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        background-color: rgba(0, 0, 0, 0.4);
-        animation: fadeIn 0.5s ease-in-out;
-    }
-
+/* Phones */
+@media (max-width: 480px) {
     .modal-content {
-        background-color: #0e7cea;
-        margin: auto;
-        padding: 30px;
-        border: 2px solid transparent;
-        border-radius: 15px;
-        width: 80%;
-        max-width: 500px;
-        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        width: 92%;
+        padding: 20px;
     }
 
-    @keyframes fadeOut {
-        from {
-            opacity: 0;
-        }
-
-        to {
-            opacity: 1;
-        }
-    }
-
-    @keyframes zoomIn {
-        from {
-            transform: translate(-50%, -50%) scale(0.8);
-            opacity: 0;
-        }
-
-        to {
-            transform: translate(-50%, -50%) scale(1);
-            opacity: 1;
-        }
-    }
-
-    /* Close Button */
-    .close {
-        color: #aaa;
-        font-size: 28px;
-        font-weight: bold;
-        position: absolute;
+    .auth-btn {
+        font-size: 9px;
+        padding: 5px 14px;
+        left: 10px;
         top: 10px;
-        right: 15px;
-        cursor: pointer;
     }
 
-    .close:hover,
-    .close:focus {
-        color: black;
-        text-decoration: none;
+    .welcome-user {
+        font-size: 12px;
+        left: 10px;
+        top: 40px;
+    }
+}
+
+/* EXACT 320–360 WIDTH */
+@media (max-width: 360px) {
+    .modal-content {
+        width: 95%;
+        max-width: 300px;
+        padding: 18px;
     }
 
-    /* Form Styling */
-    form {
-        display: flex;
-        flex-direction: column;
-    }
-
-    label {
-        margin-bottom: 5px;
-        font-weight: bold;
-        color: #ffffff;
+    .close {
+        font-size: 20px;
+        top: 6px;
+        right: 10px;
     }
 
     input[type="text"],
     input[type="email"],
     input[type="password"] {
-        padding: 12px;
-        margin-bottom: 15px;
-        border: 1px solid #ddd;
-        border-radius: 5px;
-        font-size: 16px;
+        font-size: 14px;
+        padding: 10px;
     }
 
     input[type="submit"] {
-        background-color: #000000;
-        color: #ffffff;
-        border: none;
-        padding: 12px 20px;
-        font-size: 16px;
-        cursor: pointer;
-        border-radius: 5px;
-        transition: background-color 0.3s;
+        font-size: 14px;
+        padding: 10px;
     }
+}
 
-    input[type="submit"]:hover {
-        background-color: #333;
+/* LANDSCAPE PHONES */
+@media (max-height: 420px) {
+    .modal-content {
+        max-height: 85vh;
     }
+}
 
-    /* Welcome Text Styling */
-    .welcome-user {
-        color: #f60bb7;
-        font-size: 15px;
-        position: fixed;
-        top: 80px;
-        left: 270px;
-        /* Moved below the auth button */
-        text-align: left;
-        font-weight: bold;
-        /* Bold text */
-        font-style: italic;
-        /* Italic text */
-    }
+/* modal styling khatam */
 
-    /* Responsive Styling for 320x513 */
-    @media (max-width: 320px) {
-        .modal-content {
-            width: 90%;
-            padding: 20px;
-            max-width: 300px;
-        }
-
-        .auth-btn {
-            font-size: 9px;
-            padding: 5px 12px;
-            top: 5px;
-            left: 15px;
-            /* Adjusted for small screens */
-        }
-
-        .close {
-            font-size: 20px;
-            top: 5px;
-            right: 10px;
-        }
-
-        input[type="text"],
-        input[type="email"],
-        input[type="password"] {
-            font-size: 14px;
-            padding: 10px;
-        }
-
-        input[type="submit"] {
-            font-size: 14px;
-            padding: 10px 15px;
-        }
-
-        .welcome-user {
-            font-size: 12px;
-            top: 40px;
-            left: 10px;
-            /* Adjusted for better alignment on small screens */
-        }
-    }
-
-
-    /* modal styling khatam */
 
     /* chatbot styling start */
     #chatContainer {
@@ -1870,6 +1891,7 @@
 <script src="assets/js/news.js"></script>
 
 </body>
+
 
 
 
